# materials-research-lakehouse

./: .gitignore  README.md  databricks.yml  pyproject.toml
contracts/: experiment-event.schema.json
data/sample/: experiment-events.jsonl
resources/: pipeline.yml  unity_catalog.yml
scripts/: upload_sample_data.sh  verify_databricks_tables.py
src/materials_research_lakehouse/: __init__.py  bronze.py  gold.py  pipeline.py  reader.py  schemas.py  silver.py
tests/: conftest.py  test_bronze.py  test_experiment_contract.py  test_experiment_reader.py  test_gold.py  test_silver.py
