[project]
name = "materials-research-lakehouse"
version = "0.1.0"
description = "A governed lakehouse platform for materials research experiment data."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jsonschema[format]>=4.26.0",
    "pytest>=9.1.1",
]
